--- a/build.gradle
+++ b/build.gradle
@@ -26,16 +26,16 @@ repositories {
 }
 
 dependencies {
-  compile 'io.vertx:vertx-core:3.0.0'
+  compile 'io.vertx:vertx-core:3.1.0'
   compile 'org.slf4j:log4j-over-slf4j:1.7.12'
-  compile ("org.apache.kafka:kafka_2.10:0.8.2.2") {
+  compile ("org.apache.kafka:kafka-clients:0.8.2.2") {
       exclude group: 'com.sun.jdmk', module: 'jmxtools'
       exclude group: 'com.sun.jmx', module: 'jmxri'
       exclude group: 'org.slf4j', module: 'slf4j-log4j12'
       exclude group: 'log4j', module: 'log4j'
   }
   testCompile "junit:junit:4.11"
-  testCompile "io.vertx:vertx-unit:3.0.0"
+  testCompile "io.vertx:vertx-unit:3.2.0"
   testCompile "org.mockito:mockito-core:1.9.5"
   testCompile "org.powermock:powermock-api-mockito:1.5.5"
 }
